<resources>
    <string name="app_name">serverLook</string>
    <string name="action_settings">Settings</string>

    <!--Buttons-->
    <string name="btn_tmp_baie">Bay temperature statistics</string>
    <string name="btn_usage_proc">Processor usage statistics</string>
    <string name="btn_usage_hdd">HDD usage statistics</string>
    <string name="btn_courbe_stats">Statistics curve</string>
    <string name="btn_list">Loading the temperature list</string>
    <!--Fin Buttons-->

    <string name="pref_cat_serveursql"> SERVER SETTINGS</string>

    <string name="title_ipServeur"> Server Express SQL IP </string>
    <string name="summary_ipServeur"> Enter the adress or the host name </string>

    <string name="title_portServeur"> Server Express SQL Port </string>
    <string name="summary_portServeur"> Enter the listening port of the server </string>

    <string name="title_user"> Username </string>
    <string name="summary_user"> Enter the name of the authorized account </string>

    <string name="title_password"> Password </string>
    <string name="summary_password"> Enter the connection password </string>


    <string name="pref_cat_serveursnmp"> SNMP SERVER SETTINGS </string>

    <string name="title_ipSNMP"> Agent SNMP v1 IP </string>
    <string name="summary_ipSNMP">Enter  the adress or the host name </string>

    <string name="title_PortSNMP"> Agent SNMP v1 Port </string>
    <string name="summary_PortSNMP"> Enter the listening port of the server </string>

    <string name="title_CommunSNMP"> SNMP read community</string>
    <string name="summary_CommunSNMP">Enter the reading community </string>


    <string name="pref_cat_serveurTEMP"> SNMP TEMPERATURE SENSOR SETTINGS </string>

    <string name="title_ipTEMP"> Agent SNMP v1 IP</string>
    <string name="summary_ipTEMP">Enter  the adress or the host name </string>

    <string name="title_PortTEMP">Agent SNMP v1 Port </string>
    <string name="summary_PortTEMP">Enter the listening port of the server </string>

    <string name="title_CommunTEMP"> SNMP read community </string>
    <string name="summary_CommunTEMP">Enter the reading community</string>

    <!-- Fin des préférences -->
</resources>
